--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,6 +50,19 @@
         <item name="android:selectAllOnFocus">true</item>
         <item name="android:imeOptions">actionDone</item>
     </style>
+    <style name="edit_text_current_BG">
+        <item name="android:textSize">@dimen/text_edit_size</item>
+        <item name="android:textColor">@color/text_edit</item>
+        <item name="android:typeface">monospace</item>
+        <item name="android:layout_width">@dimen/text_edit_width</item>
+        <item name="android:layout_height">@dimen/text_height</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:layout_margin">@dimen/margin_view_size</item>
+        <item name="android:maxLength">3</item>
+        <item name="android:inputType">numberDecimal|numberSigned</item>
+        <item name="android:selectAllOnFocus">true</item>
+        <item name="android:imeOptions">actionDone</item>
+    </style>
     <style name="edit_text_decimal">
         <item name="android:textSize">@dimen/text_edit_size</item>
         <item name="android:textColor">@color/text_edit</item>
@@ -76,11 +89,12 @@
         <item name="android:background">@color/horizontal_line</item>
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">2dip</item>
-        <item name="android:layout_margin">8sp</item>
+        <item name="android:layout_margin">4sp</item>
     </style>
 
     <style name="button">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 </resources>
