--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,8 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.insulet.thomas.boluscalculator.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/about"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="always"/>
+        android:title="About"
+        app:showAsAction="never" />
 </menu>
