improve Espresso library

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -67,6 +67,20 @@
         <item name="android:imeOptions">actionDone</item>
         <item name="android:textAlignment">textEnd</item>
     </style>
+    <style name="edit_text_text">
+        <item name="android:textSize">@dimen/text_edit_size</item>
+        <item name="android:textColor">@color/text_edit</item>
+        <item name="android:typeface">monospace</item>
+        <item name="android:layout_width">@dimen/text_edit_width</item>
+        <item name="android:layout_height">@dimen/text_height</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:layout_margin">@dimen/margin_view_size</item>
+        <item name="android:maxLength">20</item>
+        <item name="android:inputType">text</item>
+        <item name="android:selectAllOnFocus">true</item>
+        <item name="android:imeOptions">actionDone</item>
+        <item name="android:textAlignment">textEnd</item>
+    </style>
     <style name="edit_text_current_BG">
         <item name="android:textSize">@dimen/text_edit_size</item>
         <item name="android:textColor">@color/text_edit</item>
