--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -246,4 +246,28 @@
         android:layout_margin="8dp"
         app:layout_constraintVertical_bias="0.5"
         app:layout_constraintHorizontal_bias="1.0"/>
+
+    <!-- ===========================================================================================
+    Used to test Espresso ONLY
+    ============================================================================================ -->
+
+    <View
+        style="@style/horizontal_line"
+        android:id="@+id/line_2"
+        app:layout_constraintTop_toBottomOf="@+id/button_reverse_correction"
+        />
+    <!--<Spinner-->
+        <!--android:id="@+id/spinner_simple"-->
+        <!--android:background="@color/colorPrimary"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:entries="@array/country_arrays"-->
+        <!--android:prompt="@string/country_prompt"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/line_2"/>-->
+    <!--<EditText-->
+        <!--style="@style/edit_text_text"-->
+        <!--android:id="@+id/edit_text_espresso"-->
+        <!--android:text=""-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/line_2"/>-->
+
 </android.support.constraint.ConstraintLayout>
